# running-stats-py

./: .bumpversion.toml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release.yml  rolling.yml  scheduled.yml  test.yml
scripts/: transform_readme.py
src/running_stats/: running_stats.py
tests/: test_running_stats.py
