[project]
name = "running-stats"
version = "0.1.3"
description = "Library for computing linear statistics."
readme = "README.md"
authors = [{ name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }]
requires-python = ">=3.10"
dependencies = ["attrs>=25.1.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    # "uncomment if you test on these interpreters:",
    # "Programming Language :: Python :: Implementation :: IronPython",
    # "Programming Language :: Python :: Implementation :: Jython",
    # "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Utilities",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://spraakbanken.gu.se"
Repository = "https://github.com/kod-kristoff/running-stats-py"
Issues = "https://github.com/kod-kristoff/running-stats-py/issues"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.9.7"]
